<resources>
    <string name="app_name">EasyCash</string>
    <string name="login_header_text">Login to your account</string>
    <string name="login_subtext">Log in to your account to enjoy the best service experience from our platform.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_cta">Sign up</string>
    <string name="login_button_text">Login</string>
    <string name="email_input_label">Email</string>
    <string name="password_input_label">Password</string>
    <string name="have_an_account_text">Have an account?</string>
    <string name="sign_in_cta">Sign in</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="signup_header_text">Create New Account</string>
    <string name="signup_subtext">Create your account to enjoy the best experience services from our platform.</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="forgot_password_header">Forgot Your Password?</string>
    <string name="forgot_password_subtext">Enter your email account so we can send you a verification code.</string>
    <string name="forgot_password_button_text">Send</string>
    <string name="reset_password_header">Reset Password</string>
    <string name="confirm_password_input_label">Confirm Password</string>
</resources>